# ParallelPix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarking/: analysis.py  benchmark.cpp  benchmark.h
effects/: anime_filter.cpp  effects.hpp  gaussian_blur.cpp  image_processor.cpp  oil_painting.cpp  pencil_sketch.cpp  thermal_effect.cpp
gui/: gui_app.py
reports/: generate_report.py  report_template.md
utils/: cpu_monitor.cpp  cpu_monitor.h  logger.cpp  logger.h  system_info.cpp  system_info.h  timer.cpp  timer.h
